+ Added lucida console font as we needed a .ttf font to work with SDL_ttf ~ Finished Sprite class implementation ~ Most resources and files now load through their respective (new) systems ~ Reworked Play state class (about 75% complete I suppose) ~ Put in a few comments to indicate what is left to finish

--- a/MSVC/SpaceScroll.vcxproj
+++ b/MSVC/SpaceScroll.vcxproj
@@ -52,6 +52,7 @@
     </ClCompile>
     <ClCompile Include="..\Source\play.cpp" />
     <ClCompile Include="..\Source\Sprite.cpp" />
+    <ClCompile Include="..\Source\State.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{059FFE2A-56B8-4581-BBEE-819E5771832D}</ProjectGuid>
