~ Forgot to save a file before committing

--- a/MSVC/SpaceScroll.vcxproj
+++ b/MSVC/SpaceScroll.vcxproj
@@ -33,7 +33,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\Source\explode.cpp" />
+    <ClCompile Include="..\Source\explode.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\Source\Game.cpp" />
     <ClCompile Include="..\Source\ImgManager.cpp" />
     <ClCompile Include="..\Source\main.cpp" />
