--- a/MSVC/SpaceScroll.vcxproj.filters
+++ b/MSVC/SpaceScroll.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Include\Enum.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\Include\SDLHeaders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -59,6 +56,9 @@
     </ClInclude>
     <ClInclude Include="Mouse.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Include\Enum.h">
+      <Filter>Deprecated</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
